--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_URI=mongodb+srv://haythem:53Jgg2N8ypTI3aXR@cluster0.bweu0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_URI=mongodb+srv://haythem:SbWlVG1ZQrtR53N2@cluster0.bweu0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRET_KEY="mysecretkey"
